--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "openai>=1.51.2",
     "pydantic-settings>=2.5.2",
     "piccolo[sqlite]>=1.20.0",
+    "pytest>=8.3.3",
+    "pytest-mock>=3.14.0",
 ]
 
 [tool.uv]
